--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -88,7 +88,7 @@ $$
 
 where $m$ represents the number of predictors, $b_0$ is the intercept, and $b_1$ to $b_m$ are the learned coefficients. In this setup, $\hat{y}$ is a weighted sum of the input features ($x_1$ to $x_m$), with the weights ($b_1$ to $b_m$) determining the influence of each feature on the prediction. This relationship is visualized in @fig-ch12-net-reg, where predictors and outputs are shown as nodes, with the coefficients acting as connecting weights.
 
-```{r fig-ch12-net-reg, echo = FALSE, out.width = "45%", fig.cap = "A graphical representation of a regression model: input features and predictions are shown as nodes, with the coefficients represented as connections between the nodes."}
+```{r fig-ch12-net-reg, echo = FALSE, out.width = "42%", fig.cap = "A graphical representation of a regression model: input features and predictions are shown as nodes, with the coefficients represented as connections between the nodes."}
 knitr::include_graphics("images/ch12_neural_network_reg.png")
 ```
 
@@ -160,7 +160,7 @@ $$
 
 This binary, step-like behavior is shown in @fig-ch12-active-fun.
 
-```{r fig-ch12-active-fun, echo = FALSE, out.width = "70%", fig.cap = "Visualization of the threshold activation function (unit step)."}
+```{r fig-ch12-active-fun, echo = FALSE, fig.cap = "Visualization of the threshold activation function (unit step)."}
 library(ggplot2)       
 
 x_values <- seq(-10, 10, by = 0.1)
@@ -184,7 +184,7 @@ $$
 
 where $e$ is the base of the natural logarithm. The sigmoid function produces a characteristic S-shaped curve, as shown in @fig-ch12-active-fun-sigmoid, and is both continuous and differentiable.
 
-```{r fig-ch12-active-fun-sigmoid, echo = FALSE, out.width = "70%", fig.cap = "Visualization of the sigmoid activation function."}
+```{r fig-ch12-active-fun-sigmoid, echo = FALSE, fig.cap = "Visualization of the sigmoid activation function."}
 x_values <- seq(-10, 10, by = 0.01)
 data <- data.frame(x = x_values, y = 1 / (1 + exp(-x_values)))
 
@@ -222,7 +222,7 @@ While the sigmoid function was foundational in early neural networks, modern arc
 
 @fig-ch12-active-fun-comparison visually compares the output shapes of sigmoid, tanh, and ReLU activation functions across a range of inputs.
 
-```{r fig-ch12-active-fun-comparison, echo = FALSE, out.width = "85%", fig.cap = "Comparison of common activation functions: sigmoid, tanh, and ReLU."}
+```{r fig-ch12-active-fun-comparison, echo = FALSE, fig.cap = "Comparison of common activation functions: sigmoid, tanh, and ReLU."}
 x_values <- seq(-5, 5, by = 0.008)
 sigmoid <- 1 / (1 + exp(-x_values))
 tanh_val <- tanh(x_values)
