--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -1059,7 +1059,7 @@ workflow.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-1.png}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-1.png}
 
 }
 
@@ -1257,7 +1257,7 @@ reference.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-install.png}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-install.png}
 
 }
 
@@ -1539,7 +1539,7 @@ depending on your installed packages and RStudio setup.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-data-1.png}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-data-1.png}
 
 }
 
@@ -1559,7 +1559,7 @@ analysis.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-data.png}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{images/ch1_RStudio-window-data.png}
 
 }
 
@@ -2525,7 +2525,7 @@ layers that form the backbone of any \textbf{ggplot2} visualization.
 
 \centering{
 
-\includegraphics[width=0.78\linewidth,height=\textheight,keepaspectratio]{images/ch1_ggplot_layers.png}
+\includegraphics[width=0.8\linewidth,height=\textheight,keepaspectratio]{images/ch1_ggplot_layers.png}
 
 }
 
@@ -2556,7 +2556,7 @@ the built-in \emph{mtcars} dataset:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-53-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-53-1.pdf}
 \end{center}
 
 In this example:
@@ -2627,7 +2627,7 @@ using a smoothed trend line:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-55-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-55-1.pdf}
 \end{center}
 
 This plot shows the general pattern in the data, helping you see whether
@@ -2645,7 +2645,7 @@ instance, layering a scatter plot with a smooth trend line:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-56-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-56-1.pdf}
 \end{center}
 
 The order of layers matters: here, the trend line is plotted first, and
@@ -2692,7 +2692,7 @@ in a car:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-58-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-58-1.pdf}
 \end{center}
 
 Because \texttt{color\ =\ cyl} is inside \texttt{aes()}, the color is
@@ -2745,7 +2745,7 @@ points blue or triangles of the same size, set the attributes
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-60-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-60-1.pdf}
 \end{center}
 
 This creates a plot with fixed styling: all points are blue, triangular,
@@ -3549,7 +3549,7 @@ Exercises}\label{more-challenging-exercises}
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-69-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-69-1.pdf}
 \end{center}
 
 \begin{enumerate}
@@ -6494,7 +6494,7 @@ boxplot and a histogram:
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
-     \FunctionTok{geom\_boxplot}\NormalTok{() }\SpecialCharTok{+}
+     \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{color =} \StringTok{"darkblue"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
      \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Boxplot of capital.loss"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
@@ -6532,7 +6532,7 @@ rows where \texttt{capital.loss\ \textgreater{}\ 0}:
 \NormalTok{subset\_adult }\OtherTok{\textless{}{-}} \FunctionTok{subset}\NormalTok{(adult, capital.loss }\SpecialCharTok{\textgreater{}} \DecValTok{0}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ subset\_adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
-     \FunctionTok{geom\_boxplot}\NormalTok{() }\SpecialCharTok{+}
+     \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{color =} \StringTok{"darkblue"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
      \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Boxplot of nonzero capital.loss"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ subset\_adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
@@ -7976,7 +7976,7 @@ who use the service heavily during both periods more likely to leave?
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{4-Exploratory-data-analysis_files/figure-pdf/unnamed-chunk-17-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{4-Exploratory-data-analysis_files/figure-pdf/unnamed-chunk-17-1.pdf}
 \end{center}
 
 To help identify behavioral segments, we add a diagonal line using
@@ -8028,7 +8028,7 @@ Next, we examine another potential interaction: the relationship between
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{4-Exploratory-data-analysis_files/figure-pdf/unnamed-chunk-19-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{4-Exploratory-data-analysis_files/figure-pdf/unnamed-chunk-19-1.pdf}
 \end{center}
 
 This scatter plot highlights an interesting pattern. Customers who
@@ -9495,7 +9495,7 @@ What can we learn from the distribution of prices across cut categories?
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{5-Statistics_files/figure-pdf/unnamed-chunk-17-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{5-Statistics_files/figure-pdf/unnamed-chunk-17-1.pdf}
 \end{center}
 
 The box plot shows the distribution and median prices for each cut
@@ -9591,7 +9591,7 @@ visually assess the relationship:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{5-Statistics_files/figure-pdf/unnamed-chunk-19-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{5-Statistics_files/figure-pdf/unnamed-chunk-19-1.pdf}
 \end{center}
 
 The scatter plot reveals a clear upward trend, suggesting that as carat
@@ -11279,7 +11279,7 @@ entirely ambiguous.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-drug-3-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-drug-3-1.pdf}
 
 }
 
@@ -11291,7 +11291,7 @@ entirely ambiguous.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-drug-3-2.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-drug-3-2.pdf}
 
 }
 
@@ -11303,7 +11303,7 @@ entirely ambiguous.
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-drug-3-3.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-drug-3-3.pdf}
 
 }
 
@@ -11646,7 +11646,7 @@ package:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-proper-scaling-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-proper-scaling-1.pdf}
 
 }
 
@@ -11658,7 +11658,7 @@ package:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-proper-scaling-2.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-proper-scaling-2.pdf}
 
 }
 
@@ -11670,7 +11670,7 @@ package:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-proper-scaling-3.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{7-Classification-kNN_files/figure-pdf/fig-ch7-ex-proper-scaling-3.pdf}
 
 }
 
@@ -14882,7 +14882,7 @@ threshold-agnostic view of model performance.
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{9-Naive-Bayes_files/figure-pdf/unnamed-chunk-17-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{9-Naive-Bayes_files/figure-pdf/unnamed-chunk-17-1.pdf}
 \end{center}
 
 The ROC curve plots the \emph{true positive rate} (sensitivity) against
@@ -17587,7 +17587,7 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-1.pdf}
 
 }
 
@@ -17599,7 +17599,7 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-2.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-2.pdf}
 
 }
 
@@ -17611,7 +17611,7 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-3.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-3.pdf}
 
 }
 
@@ -17623,7 +17623,7 @@ We generate diagnostic plots using:
 
 \centering{
 
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-4.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/fig-ch10-model-diagnostics-4.pdf}
 
 }
 
@@ -19564,7 +19564,7 @@ visualize variable importance:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{11-Tree-based-models_files/figure-pdf/unnamed-chunk-20-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{11-Tree-based-models_files/figure-pdf/unnamed-chunk-20-1.pdf}
 \end{center}
 
 The resulting plot ranks predictors by their influence. In this case,
@@ -19580,7 +19580,7 @@ We can also assess how model error evolves as more trees are added:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{11-Tree-based-models_files/figure-pdf/unnamed-chunk-21-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{11-Tree-based-models_files/figure-pdf/unnamed-chunk-21-1.pdf}
 \end{center}
 
 This plot shows classification error as a function of the number of
@@ -20428,7 +20428,7 @@ weights.
 
 \centering{
 
-\includegraphics[width=0.45\linewidth,height=\textheight,keepaspectratio]{images/ch12_neural_network_reg.png}
+\includegraphics[width=0.42\linewidth,height=\textheight,keepaspectratio]{images/ch12_neural_network_reg.png}
 
 }
 
@@ -20596,7 +20596,7 @@ Figure~\ref{fig-ch12-active-fun}.
 
 \centering{
 
-\includegraphics[width=0.7\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/fig-ch12-active-fun-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/fig-ch12-active-fun-1.pdf}
 
 }
 
@@ -20634,7 +20634,7 @@ differentiable.
 
 \centering{
 
-\includegraphics[width=0.7\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/fig-ch12-active-fun-sigmoid-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/fig-ch12-active-fun-sigmoid-1.pdf}
 
 }
 
@@ -20707,7 +20707,7 @@ inputs.
 
 \centering{
 
-\includegraphics[width=0.85\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/fig-ch12-active-fun-comparison-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/fig-ch12-active-fun-comparison-1.pdf}
 
 }
 
@@ -21619,7 +21619,7 @@ Under the Curve (AUC):
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/unnamed-chunk-17-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{12-Neural-networks_files/figure-pdf/unnamed-chunk-17-1.pdf}
 \end{center}
 
 The ROC curve visualizes the trade-off between sensitivity (true
@@ -22773,7 +22773,7 @@ silhouette width.
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{13-Clustering_files/figure-pdf/unnamed-chunk-17-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{13-Clustering_files/figure-pdf/unnamed-chunk-17-1.pdf}
 \end{center}
 
 As shown in Figure~\ref{fig-ch13-elbow}, the WCSS drops sharply for
@@ -22851,7 +22851,7 @@ to visualize the four groups:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{13-Clustering_files/figure-pdf/unnamed-chunk-20-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{13-Clustering_files/figure-pdf/unnamed-chunk-20-1.pdf}
 \end{center}
 
 The resulting scatter plot displays the cluster structure, with each
